# synker

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  compose.yml  synker-daemon.service
data/files/: 2804cd43-c6c9-4173-a60a-fc608a88d12a.md  2ed1b1b7-0792-4e5b-8ac8-a439ada89e17.md  4ba91f4d-b1e9-4e92-ae1a-9a7d07360844.md  4ef6fb72-ddd7-4b38-b6d2-a837e8d11566.md  9b0c3b29-e399-4386-82a8-ac23eede3620.md
data/files/.meta/: 1d05f171-311b-4381-89d2-1301b97a0e79.json  2804cd43-c6c9-4173-a60a-fc608a88d12a.json  2ed1b1b7-0792-4e5b-8ac8-a439ada89e17.json  4ba91f4d-b1e9-4e92-ae1a-9a7d07360844.json  4ef6fb72-ddd7-4b38-b6d2-a837e8d11566.json  9b0c3b29-e399-4386-82a8-ac23eede3620.json  9defaf6d-621e-4af4-b050-eb238de24405.json
src/: main.rs
src/domain/: mod.rs
src/domain/logic/: editor.rs  file_manager.rs  mod.rs  synchronisation.rs
src/domain/ports/: file_manager.rs  mod.rs  synchronisation.rs
src/domain/services/: file_manager.rs  mod.rs  synchronisation.rs
src/domain/types/file/: file.rs  file_metadata.rs  file_query.rs  mod.rs
src/inbound/cli/: mod.rs  modes.rs  read_arguments.rs
src/inbound/cli/daemon/: timer.rs  watcher.rs
src/inbound/server/: error_response.rs  mod.rs  setup.rs  state.rs
src/inbound/server/handlers/: api.rs  (+3 more)
src/outbound/: file_system.rs  git_synchronizer.rs  mod.rs
static/css/: components.css  editor.css  main.css  search.css
static/js/: editor.js  markdown.js  search.js
templates/: base.html
templates/editor/: editor.html
templates/search/: search.html
tests/: git_integration.rs  http_integration.rs
(+10 files in other folders)
