[package]
name = "synker"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { version = "1.21", features = ["v4", "serde"] }
axum = { version = "0.8", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.49", features = ["full"] }
dotenvy = "0.15.7"
askama = "0.15.4"
tower-http = { version = "0.6", features = ["fs", "cors"] }
chrono = { version = "0.4", features = ["serde"] }
git2 = { version = "0.20", features = ["vendored-libgit2"] }
notify = "8"
